# fission

./: .gitignore  .gitmodules  CHANGELOG.md  COMMIT_MSG.tmp  COMMIT_MSG_3.tmp  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/authoring/fission-charts/: Cargo.toml  README.md
crates/authoring/fission-charts/src/: axis.rs  chart.rs  coord.rs  dataset.rs  encode.rs  lib.rs  model.rs  tooltip.rs
crates/authoring/fission-charts/src/components/: axis_pointer.rs  data_zoom.rs  mod.rs  visual_map.rs
crates/authoring/fission-charts/src/layout/: calendar.rs  force_graph.rs  log_scale.rs  map.rs  math.rs  mod.rs  polar.rs  sankey.rs  scale.rs  time_scale.rs  treemap.rs  wordcloud.rs
crates/authoring/fission-charts/src/marks/: types.rs
crates/authoring/fission-charts/src/series/: bar.rs  boxplot.rs  candlestick.rs  custom.rs  effect_scatter.rs  funnel.rs  gauge.rs  graph.rs  heatmap.rs  line.rs  liquidfill.rs  map.rs  mod.rs  modifiers.rs  parallel.rs  pictorial_bar.rs  pie.rs  radar.rs  sankey.rs  scatter.rs  sunburst.rs  theme_river.rs  treemap.rs  wordcloud.rs
crates/authoring/fission-charts/tests/: chart_tests.rs
crates/authoring/fission-icons/: Cargo.toml  README.md  build.rs
crates/authoring/fission-icons/material-icons-vendor/: README.md  index.json
crates/authoring/fission-icons/src/: lib.rs
crates/authoring/fission-icons/tools/: fetch_material_icons.sh  vendor_material_icons.py
crates/authoring/fission-macros/: Cargo.toml  README.md
crates/authoring/fission-macros/src/: lib.rs
crates/core/fission-3d/: Cargo.toml  README.md
crates/core/fission-3d/src/: lib.rs  render.rs  shader.wgsl
crates/core/fission-3d/tests/: 3d_tests.rs
crates/core/fission-semantics/: Cargo.toml  README.md
crates/core/fission-semantics/tests/: semantics_invariants.rs
crates/core/fission-text-engine/: Cargo.toml
crates/core/fission-text-engine/src/: edit.rs  tests.rs
crates/rendering/fission-render-skia/: Cargo.toml
crates/rendering/fission-render-skia/src/: lib.rs
crates/rendering/fission-render-vello/: Cargo.toml  README.md
crates/rendering/fission-render-vello/src/: lib.rs  text.rs
crates/rendering/fission-render-wgpu2d/: Cargo.toml
crates/rendering/fission-render-wgpu2d/src/: lib.rs
crates/shell/fission-shell/: Cargo.toml  README.md
crates/shell/fission-shell-desktop/: Cargo.toml
crates/shell/fission-shell-desktop/src/: compositor.rs  compositor.wgsl  ime.rs  lib.rs  pipeline.rs  test_control.rs  video_backend.rs
crates/shell/fission-shell-desktop/tests/: composition_cycles.rs  composition_strict.rs  text_input_real_measurer.rs
crates/shell/fission-shell-mobile/: Cargo.toml  README.md
crates/shell/fission-shell-mobile/src/: lib.rs
crates/shell/fission-shell-server/: Cargo.toml  README.md
crates/shell/fission-shell-server/assets/: server-runtime.js
crates/shell/fission-shell-server/src/: app.rs  artifacts.rs  cache.rs  lib.rs  protocol.rs  render.rs  route.rs  serve.rs
crates/shell/fission-shell-site/: Cargo.toml  README.md
crates/shell/fission-shell-site/assets/: site-enhancement.js  site.css
crates/shell/fission-shell-site/src/: browser_island.rs  build.rs  document.rs  front_matter.rs  html.rs  lib.rs  site.rs
crates/shell/fission-shell-terminal/: Cargo.toml  README.md
crates/shell/fission-shell-terminal/src/: app.rs  frame.rs  lib.rs  render.rs  screenshot.rs  text.rs  verify.rs
crates/shell/fission-shell-terminal/tests/: terminal_shell_tests.rs
crates/shell/fission-shell-web/: Cargo.toml  README.md
crates/shell/fission-shell-web/src/: lib.rs
crates/shell/fission-shell/src/: lib.rs
crates/shell/fission-shell/src/async_host/: wasm.rs
crates/shell/fission-shell/tests/: shell_invariants.rs
crates/tools/fission-command-server/: Cargo.toml
crates/tools/fission-command-server/src/: lib.rs
crates/tools/fission-command-site/: Cargo.toml
crates/tools/fission-command-site/src/: lib.rs
crates/tools/fission-test/: Cargo.toml  README.md  layout_debug.jsonl
crates/tools/fission-test/src/: driver.rs  lib.rs  linter.rs
crates/tools/fission-test/tests/: container_layout.rs  debug_inbox_layout.rs  debug_menu_portal.rs  drawer_dismiss.rs  email_list_layout.rs  embeds.rs  end_to_end.rs  flyout_bounds.rs  flyout_does_not_affect_content.rs  interaction_and_layout_regressions.rs  interaction_cycles.rs  into_widget_authoring.rs  lazy_column_layout.rs  lazy_column_panic.rs  media.rs  ordering.rs  repro_inbox_panic.rs  scrolling.rs  system_effects_persistence.rs  text_input_modal_focus.rs  text_layout_regression.rs  text_wrap_height.rs  text_wrapping_layout.rs  ui_regressions.rs  widget_state_interactions.rs
docs/: 01-1-goals-of-the-framework.md  01-2-determinism-as-a-first-class-requirement.md  01-3-testability-and-observability.md  01-4-separation-of-concerns.md  01-5-why-a-core-ir.md  01-6-non-goals-and-explicit-trade-offs.md  04-3-1-structural-ops.md  (+142 more)
examples/field-inspector/: .gitignore  Cargo.toml  README.md  fission.toml
examples/field-inspector/src/: api.rs  data.rs  lib.rs  main.rs  model.rs
examples/field-inspector/src/components/: app.rs  mod.rs  overview.rs  panels.rs  status.rs  ui.rs  work_orders.rs
examples/field-inspector/tests/: live_e2e.rs
examples/icons_gallery/: Cargo.toml  README.md
examples/icons_gallery/src/: main.rs
examples/icons_gallery/tests/: live_e2e.rs
examples/pokemon-card-store/: Cargo.toml  README.md  fission.toml
examples/pokemon-card-store/src/: app.rs  data.rs  islands.rs  lib.rs  server.rs
examples/pokemon-card-store/src/components/: card_grid.rs  hero.rs  shell.rs
examples/pokemon-card-store/tests/: server.rs
examples/product-browser/: Cargo.toml  README.md
examples/product-browser/src/: api.rs  main.rs  model.rs
examples/product-browser/src/components/: browser.rs  categories.rs  mod.rs  product_card.rs  product_detail.rs  product_results.rs
examples/product-browser/tests/: live_e2e.rs
examples/web-smoke/: Cargo.toml  README.md  fission.toml
examples/web-smoke/src/: app.rs  lib.rs  main.rs
(+1307 files in other folders)
