[package]
name = "pokemon-card-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["server"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "pokemon-card-store"
path = "src/main.rs"
