[package]
name = "product-browser"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission", default-features = false, features = ["desktop"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
fission-test-driver = { path = "../../crates/tools/fission-test-driver" }
image = "0.25"
