[package]
name = "web-smoke"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_smoke"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
fission = { path = "../../crates/authoring/fission" }
fission-core = { path = "../../crates/core/fission-core" }
fission-macros = { path = "../../crates/authoring/fission-macros" }
lazy_static = "1"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
