[package]
name = "fission-3d"
version = "0.6.1"
edition = "2021"

license = "MIT"
repository = "https://github.com/fission-ui/fission"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
description = "3D scene primitives and rendering data types for Fission applications"
readme = "README.md"
[dependencies]
fission-core = { path = "../fission-core", version = "0.6.1" }
fission-ir = { path = "../fission-ir", version = "0.6.1" }
serde = { version = "1.0", features = ["derive"] }
wgpu = "26.0"
bytemuck = { version = "1.18", features = ["derive"] }
bincode = "1.3"
