[package]
name = "fission-text-engine"
version = "0.5.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/fission-ui/fission"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
description = "Text shaping, editing, and measurement primitives for Fission"
readme = "README.md"
[dependencies]
ropey = "1.6"

[dev-dependencies]
