[package]
name = "fission-render-vello"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Vello renderer backend for Fission display lists"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
fission-render = { path = "../fission-render", version = "0.6.0" }
fission-layout = { path = "../../core/fission-layout", version = "0.6.0" }
fission-ir = { path = "../../core/fission-ir", version = "0.6.0" }
anyhow = "1.0"
vello = { package = "fission-vello", path = "../../../third_party/vello/vello", version = "0.6.0-fission.1", features = ["wgpu"] }
parley = "0.7.0"
fission-diagnostics = { path = "../../tools/fission-diagnostics", version = "0.6.0" }
image = "0.24"
lazy_static = "1.5.0"
peniko = "0.5"
moka = { version = "0.12.15", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
