[package]
name = "fission-shell-desktop"
version = "0.4.1"
edition = "2021"

license = "MIT"
repository = "https://github.com/worka-ai/fission"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
description = "Desktop shell wrapper for Fission applications"
readme = "README.md"
[features]
default = []
tray = ["fission-shell-winit/tray"]
three-d = ["fission-shell-winit/three-d"]

[dependencies]
fission-shell = { path = "../fission-shell", version = "0.4.1" }
fission-shell-winit = { path = "../fission-shell-winit", default-features = false, version = "0.4.1" }
fission-core = { path = "../../core/fission-core", version = "0.4.1" }
fission-theme = { path = "../../core/fission-theme", version = "0.4.1" }
winit = "0.29.15"
anyhow = "1.0"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
fission-ir = { path = "../../core/fission-ir", version = "0.4.1" }
fission-layout = { path = "../../core/fission-layout", version = "0.4.1" }
fission-macros = { path = "../../authoring/fission-macros", version = "0.4.1" }
fission-render = { path = "../../rendering/fission-render", version = "0.4.1" }
fission-render-vello = { path = "../../rendering/fission-render-vello", version = "0.4.1" }
fission-widgets = { path = "../../authoring/fission-widgets", version = "0.4.1" }
lazy_static = "1"
