[package]
name = "fission-shell-mobile"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Mobile shell wrapper for Android and iOS Fission applications"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[features]
default = []
three-d = ["fission-shell-winit/three-d"]

[dependencies]
fission-shell = { path = "../fission-shell", version = "0.5.1" }
fission-shell-winit = { path = "../fission-shell-winit", version = "0.5.1", default-features = false }
fission-core = { path = "../../core/fission-core", version = "0.5.1" }
fission-theme = { path = "../../core/fission-theme", version = "0.5.1" }
anyhow = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.13", features = ["android-native-activity"] }

[dev-dependencies]
