[package]
name = "fission-shell-server"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Server-side web shell for revalidated Fission routes, cache pipelines, workers, and islands"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
fission-core = { path = "../../core/fission-core", version = "0.2.0" }
fission-ir = { path = "../../core/fission-ir", version = "0.2.0" }
fission-layout = { path = "../../core/fission-layout", version = "0.2.0" }
fission-shell-site = { path = "../fission-shell-site", version = "0.2.0" }
fission-theme = { path = "../../core/fission-theme", version = "0.2.0" }
moka = { version = "0.12", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
fission-widgets = { path = "../../authoring/fission-widgets", version = "0.2.0", default-features = false }
