[package]
name = "fission-shell-site"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Static site shell for lowering Fission widget trees and content routes to HTML"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
anyhow = "1.0"
base64 = "0.22"
fission-core = { path = "../../core/fission-core", version = "0.5.0" }
fission-ir = { path = "../../core/fission-ir", version = "0.5.0" }
fission-layout = { path = "../../core/fission-layout", version = "0.5.0" }
fission-theme = { path = "../../core/fission-theme", version = "0.5.0" }
fission-widgets = { path = "../../authoring/fission-widgets", version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
fission-i18n = { path = "../../core/fission-i18n", version = "0.5.0" }
