[package]
name = "fission-shell-terminal"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/worka-ai/fission"
description = "Terminal shell backend for Fission applications"

[dependencies]
anyhow = "1.0"
ab_glyph = "0.2"
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["png"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
fission-core = { path = "../../core/fission-core", version = "0.1.1" }
fission-ir = { path = "../../core/fission-ir", version = "0.1.1" }
fission-layout = { path = "../../core/fission-layout", version = "0.1.1" }
fission-theme = { path = "../../core/fission-theme", version = "0.1.1" }
