[package]
name = "fission-shell"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Shared shell runtime contracts for hosting Fission applications"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
fission-core = { path = "../../core/fission-core", version = "0.5.1" }
fission-ir = { path = "../../core/fission-ir", version = "0.5.1" }
fission-render = { path = "../../rendering/fission-render", version = "0.5.1" } # Corrected path
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
