[package]
name = "fission-command-server"
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Fission CLI server shell command implementation"
homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"

[dependencies]
anyhow = "1.0"
toml = "0.8"
