[package]
name = "fission-command-site"
version = "0.6.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/fission-ui/fission"
description = "Static site command implementation for the fission command"

homepage = "https://fission.rs"
documentation = "https://fission.rs"
readme = "README.md"
[dependencies]
anyhow = "1.0"
fission-shell-site = { path = "../../shell/fission-shell-site", version = "0.6.1" }
serde_json = "1"
toml = "0.8"
